--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
               <img src="images/1732204033090.png" alt="Gaurav Garwa" />
             </div>
             <h2 class="job-title">
-              Software Developer @
-              <a href="https://123ofai.com">123 Of AI</a>
+              Software Developer
+              <!-- @
+              <a href="https://123ofai.com">123 Of AI</a> -->
               <p class="name-desc">
-                Hi! I'm Gaurav, a software developer currently working with 123
-                Of AI's team. I'm passionate about building web applications and
+                Hi! I'm Gaurav, a software developer currently working on
+                AngularJS. I'm passionate about building web applications and
                 solving complex problems. I have experience working with
                 React.js, Node.js, and various cloud technologies.
               </p>
@@ -144,7 +145,7 @@
         </a>
 
         <a
-          href="https://drive.google.com/file/d/1MIw-Om3gD0VgSWYYZKRVjNEN8XNAlIib/view?usp=sharing"
+          href="https://drive.google.com/file/d/1EMo-174tGIjw9gPNRTaFwgxwZNTiOmmZ/view?usp=sharing"
           title="Resume"
           class="resume-link"
         >
