--- a/experience.html
+++ b/experience.html
@@ -25,11 +25,35 @@
 
       <div class="experience-card">
         <h3 class="experience-title">
+          <span>Assistant Manager (Systems)</span>
+          <span>State Bank Of India</span>
+        </h3>
+        <div class="experience-duration">
+          July 2025 – Present | Navi Mumbai, India
+        </div>
+        <div class="experience-desc">
+          <ul>
+            <li>
+              Worked on building full-stack applications using React.js, Next.js
+              and Node.js, resolving critical product issues that led to a
+              significant reduction in bugs
+            </li>
+            <li>
+              Improved the application's overall performance and utilized
+              Microsoft Azure, and CI/CD architecture to deploy many services
+              and launcing new product features.
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="experience-card">
+        <h3 class="experience-title">
           <span>Software Developer</span>
           <span>123 Of AI</span>
         </h3>
         <div class="experience-duration">
-          Sept 2024 – Present | Remote (Bangalore, India)
+          Sept 2024 – July 2025 | Remote (Bangalore, India)
         </div>
         <div class="experience-desc">
           <ul>
