--- a/experience.html
+++ b/experience.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1 class="site-title">Gaurav Garwa</h1>
+      <h1 class="site-title"><span id="greeting">नमस्ते</span></h1>
       <nav>
         <a href="index.html">About</a>
         <a href="projects.html">Projects</a>
@@ -34,14 +34,12 @@
         <div class="experience-desc">
           <ul>
             <li>
-              Worked on building full-stack applications using React.js, Next.js
-              and Node.js, resolving critical product issues that led to a
-              significant reduction in bugs
+              Working with the YONO Business department as an Angular developer,
+              improving the services and user experience for better workflow.
             </li>
             <li>
-              Improved the application's overall performance and utilized
-              Microsoft Azure, and CI/CD architecture to deploy many services
-              and launcing new product features.
+              Also, having the responsibility for the full fledge SDLC for the
+              new changes and features that have to be developed from scratch.
             </li>
           </ul>
         </div>
@@ -194,5 +192,6 @@
         </a>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
