--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Gaurav Garwa</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <header>
-      <h1 class="site-title">Gaurav Garwa</h1>
+      <h1 class="site-title"><span id="greeting">नमस्ते</span></h1>
+
       <nav>
         <a href="index.html" class="active">About</a>
         <a href="projects.html">Projects</a>
@@ -172,5 +174,6 @@
         </a>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
