--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1 class="site-title">Gaurav Garwa</h1>
+      <h1 class="site-title"><span id="greeting">नमस्ते</span></h1>
       <nav>
         <a href="index.html">About</a>
         <a href="projects.html" class="active">Projects</a>
@@ -237,5 +237,6 @@
         </a>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
